# nonparallel

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md
.circleci/: config.yml
src/: lib.rs
tests/: integration.rs  tokio-macros.rs
