[package]
name = "nonparallel"
version = "0.2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>", "MOZGIII <mike-n@narod.ru>"]
documentation = "https://docs.rs/nonparallel/"
repository = "https://github.com/dbrgn/nonparallel/"
license = "MIT OR Apache-2.0"
description = "Rust macro for ensuring non-parallel execution of functions."
readme = "README.md"
keywords = ["parallel", "concurrent", "lock", "macro", "testing"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"

[dev-dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
