[package]
name = "nonparallel"
version = "0.1.1"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/nonparallel/"
repository = "https://github.com/dbrgn/nonparallel/"
license = "MIT OR Apache-2.0"
description = "Rust macro for ensuring non-parallel execution of functions. (Deprecated, use `serial_test` instead.)"
readme = "README.md"
keywords = ["parallel", "concurrent", "lock", "macro", "testing"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2018"
maintenance = { status = "deprecated" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"

[dev-dependencies]
lazy_static = "1"
